@@ -10,6 +10,8 @@ ikiwiki (3.20130904.2) UNRELEASED; urgency=low
     refresh by querying git to find the files that were changed, rather
     than looking at the work tree. Not enabled by default as it can
     break some setups where not all files get committed to git.
+  * comments: Write pending moderation comments to the transient underlay
+    to avoid conflict with only_committed_changes.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Sep 2013 10:01:10 -0400
 
